--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -1,10 +1,13 @@
 Раздел .Новость 1
 
 
-Новости с мира про юр
+Про суд
 
 
 ПримерРисунок-123
+
+
+Суды теперь рассматривают больше дел!
 
 
 Раздел .Новость 2
