--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -1,13 +1,24 @@
-Раздел .Новость 1
+Раздел .Суд не признал самообороной удар ножом в семейной ссоре
 
 
-Про суд
+Суд не признал самообороной удар ножом в семейной ссоре
 
 
 ПримерРисунок-123
 
 
-Суды теперь рассматривают больше дел!
+Суд в Вологодской области вынес обвинительный приговор женщине, которая в ходе семейной ссоры ударила сожителя ножом. Ссылки на самооборону судом были отвергнуты.
+Данное решение принципиально важно, чтобы понять, каких подходов придерживаются суды в делах о семейных скандалах. Действительно, нередко на скамье подсудимых оказываются женщины, пролившие кровь своих мужчин. Правозащитники любят нагнетать по этому поводу страсти, мол, женщин лишают права обороняться. Так это или нет - вопрос на самом деле не такой простой. Однозначно не ответить.
+
+Верховный суд разъяснил, когда человек имеет право на самооборону.
+В данном случае налицо типичные признаки дела о домашнем насилии, об опасности и распространенности которого так много твердят специализированные правозащитники.
+"Как установил суд, 25 марта 2021 года на кухне квартиры в п. Кувшиново Вологодского района во время застолья сожитель подсудимой учинил с ней ссору, а она ударила его ножом в бок", - рассказывают в объединенной пресс-службе судов Вологодской области. Мужчина выжил. Женщину обвинили в умышленном причинении тяжкого вреда здоровью, опасного для жизни.
+"В судебном заседании подсудимая вину признала частично, отрицая умысел на причинение тяжкого вреда здоровью потерпевшего, - продолжают в пресс-службе. - По ее словам, она хотела прекратить ссору, поскольку предполагала, что сожитель может продолжить свои противоправные действия в отношении нее, как это бывало ранее".
+"Противоправные действия" слишком широкий термин, под ним можно понимать что угодно. Разумно предположить: женщина хотела сказать, что боялась побоев, которые, мол, регулярно случались в ходе таких ссор. Это правдоподобная версия, и у многих она вызывает сочувствие. Однако суд не сжалился над женщиной. По крайней мере не сжалился настолько, как ей бы хотелось. Приговор был обвинительным. Хотя в тюрьму ее не отправили.
+"Суд счел доводы подсудимой несостоятельными, поскольку к моменту нанесения ножевого удара потерпевший никаких активных действий, угрожавших ее жизни и здоровью, не совершал, - сообщают в пресс-службе. - Суд назначил ей наказание в виде 2 лет и 6 месяцев лишения свободы условно с испытательным сроком 3 года".
+Ударить ножом в ответ на крики и оскорбления в пьяной ссоре суды не считают самообороной
+В переводе с юридического на обычный язык это означает: просто ругани недостаточно, чтобы удар мужа ножом суд признал самообороной. Недавно Верховный суд России оправдал женщину, которую муж начал душить. В том случае, как объяснила высокая инстанция, женщина имела все основания опасаться за свою жизнь.
+В вологодской же истории дальше слов дело у мужа не зашло. Возможно - не успело зайти. Однако ни предупредительные, ни "профилактические" удары ножом судами не прощаются. Если мужчина регулярно поднимал руку на женщину, то, безусловно, он должен быть наказан. Сегодня процедура наказания за побои, не причинившие вреда здоровью, максимально упрощена. Даже за простую пощечину легко попасть под суд по статье КоАП. Вторая пощечина отправит уже на скамью подсудимых. Понятно, что иногда женщины боятся жаловаться. Но есть и другая сторона медали: судам часто приходится рассматривать уголовные дела, когда в ходе семейных ссор, вызванных алкоголем, жены хватались за ножи. И если на мужа раньше не было жалоб, трудно доказать, что в этот раз угроза была реальной.
 
 
 Раздел .Новость 2
