--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -1,4 +1,4 @@
-Раздел .Суд не признал самообороной удар ножом в семейной ссоре
+Раздел .Суд не признал самообороной удар ножом в семейной ссоре|21.12.2021
 
 
 
@@ -19,7 +19,7 @@
 В вологодской же истории дальше слов дело у мужа не зашло. Возможно - не успело зайти. Однако ни предупредительные, ни "профилактические" удары ножом судами не прощаются. Если мужчина регулярно поднимал руку на женщину, то, безусловно, он должен быть наказан. Сегодня процедура наказания за побои, не причинившие вреда здоровью, максимально упрощена. Даже за простую пощечину легко попасть под суд по статье КоАП. Вторая пощечина отправит уже на скамью подсудимых. Понятно, что иногда женщины боятся жаловаться. Но есть и другая сторона медали: судам часто приходится рассматривать уголовные дела, когда в ходе семейных ссор, вызванных алкоголем, жены хватались за ножи. И если на мужа раньше не было жалоб, трудно доказать, что в этот раз угроза была реальной.
 
 
-Раздел .Новость 2
+Раздел .Новость 2|21.12.2021
 
 
 Новости с мира про юр номер 2
