--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -1,28 +1,54 @@
-Раздел .Суд не признал самообороной удар ножом в семейной ссоре|21.12 09:00
+Раздел .ФСБ ПРЕСЕКЛА ДЕЯТЕЛЬНОСТЬ ИЗВЕСТНОЙ ХАКЕРСКОЙ ГРУППИРОВКИ|16.01 17:00
 
-21.12 09:00
+16.01 17:00
+
 
 ПримерРисунок-123
 
 
-Суд в Вологодской области вынес обвинительный приговор женщине, которая в ходе семейной ссоры ударила сожителя ножом. Ссылки на самооборону судом были отвергнуты.
-Данное решение принципиально важно, чтобы понять, каких подходов придерживаются суды в делах о семейных скандалах. Действительно, нередко на скамье подсудимых оказываются женщины, пролившие кровь своих мужчин. Правозащитники любят нагнетать по этому поводу страсти, мол, женщин лишают права обороняться. Так это или нет - вопрос на самом деле не такой простой. Однозначно не ответить.
-
-Верховный суд разъяснил, когда человек имеет право на самооборону.
-В данном случае налицо типичные признаки дела о домашнем насилии, об опасности и распространенности которого так много твердят специализированные правозащитники.
-"Как установил суд, 25 марта 2021 года на кухне квартиры в п. Кувшиново Вологодского района во время застолья сожитель подсудимой учинил с ней ссору, а она ударила его ножом в бок", - рассказывают в объединенной пресс-службе судов Вологодской области. Мужчина выжил. Женщину обвинили в умышленном причинении тяжкого вреда здоровью, опасного для жизни.
-"В судебном заседании подсудимая вину признала частично, отрицая умысел на причинение тяжкого вреда здоровью потерпевшего, - продолжают в пресс-службе. - По ее словам, она хотела прекратить ссору, поскольку предполагала, что сожитель может продолжить свои противоправные действия в отношении нее, как это бывало ранее".
-"Противоправные действия" слишком широкий термин, под ним можно понимать что угодно. Разумно предположить: женщина хотела сказать, что боялась побоев, которые, мол, регулярно случались в ходе таких ссор. Это правдоподобная версия, и у многих она вызывает сочувствие. Однако суд не сжалился над женщиной. По крайней мере не сжалился настолько, как ей бы хотелось. Приговор был обвинительным. Хотя в тюрьму ее не отправили.
-"Суд счел доводы подсудимой несостоятельными, поскольку к моменту нанесения ножевого удара потерпевший никаких активных действий, угрожавших ее жизни и здоровью, не совершал, - сообщают в пресс-службе. - Суд назначил ей наказание в виде 2 лет и 6 месяцев лишения свободы условно с испытательным сроком 3 года".
-Ударить ножом в ответ на крики и оскорбления в пьяной ссоре суды не считают самообороной
-В переводе с юридического на обычный язык это означает: просто ругани недостаточно, чтобы удар мужа ножом суд признал самообороной. Недавно Верховный суд России оправдал женщину, которую муж начал душить. В том случае, как объяснила высокая инстанция, женщина имела все основания опасаться за свою жизнь.
-В вологодской же истории дальше слов дело у мужа не зашло. Возможно - не успело зайти. Однако ни предупредительные, ни "профилактические" удары ножом судами не прощаются. Если мужчина регулярно поднимал руку на женщину, то, безусловно, он должен быть наказан. Сегодня процедура наказания за побои, не причинившие вреда здоровью, максимально упрощена. Даже за простую пощечину легко попасть под суд по статье КоАП. Вторая пощечина отправит уже на скамью подсудимых. Понятно, что иногда женщины боятся жаловаться. Но есть и другая сторона медали: судам часто приходится рассматривать уголовные дела, когда в ходе семейных ссор, вызванных алкоголем, жены хватались за ножи. И если на мужа раньше не было жалоб, трудно доказать, что в этот раз угроза была реальной.
+В России пресечена деятельность хакерской группировки REvil, члены которой похищали деньги с помощью вредоносных программ, сообщается на сайте ФСБ РФ.
+«ФСБ РФ во взаимодействии со Следственным департаментом МВД России в Москве, Санкт-Петербурге, Московской, Ленинградской и Липецкой областях пресечена противоправная деятельность членов организованного преступного сообщества», – сказано в сообщении.
 
 
-Раздел .Новость 2|21.12 09:00
-
-21.12 09:00
-
-Новости с мира про юр номер 2
+Отмечается, что компетентные органы США сообщили Москве о лидере преступного сообщества и его причастности к посягательствам на информационные ресурсы иностранных компаний.
 
 
+ФСБ России удалось установить полный состав REvil и причастность 14-ти его членов к неправомерному обороту средств. У них были изъяты 426 миллионов рублей, 500 тысяч евро, 600 тысяч долларов, а также 20 премиум-автомобилей, приобретенных на украденные деньги.
+
+Раздел .ГОСДУМА СНЯЛА С ОБСУЖДЕНИЯ ЗАКОН О QR КОДАХ В ОБЩЕСТВЕННЫХ МЕСТАХ|16.01 17:00
+
+16.01 17:00
+
+
+ПримерРисунок-123
+
+
+Кабмин вместе с партией «Единая Россия» отложили рассмотрение законопроекта о QR-кодах во втором чтении, сообщает Риа Новости.
+
+
+Вице-премьер Татьяна Голикова пояснила, что такое решение было принято в связи с «высокой неопределенностью развития эпидемиологической ситуации в стране».
+В документ будут внесены поправки, согласно которым россияне без QR-кода смогут посещать общественные места по результату ПЦР-теста и после 1 февраля. Кроме того, Минздрав сможет устанавливать сроки действия сертификата для имеющих медицинский отвод от прививки. Военные и приравненные к ним категории граждан получат сертификаты с соблюдением требований защиты данных.
+
+
+Секретарь генсовета «Единой России» Андрей Турчак пояснил, что закон о QR-кодах и поправки к нему готовили в условиях распространения дельта-штамма COVID-19. Сегодня же законопроект необходимо адаптировать к новым условиям.
+
+
+Госдума до конца января собиралась принять правительственный законопроект о QR-кодах в общественных местах.
+
+
+Раздел .В МОСКВЕ ОЖИДАЕТСЯ РОСТ ЗАРАЖЕНИЙ ОМИКРОНОМ|16.01 17:00
+
+
+16.01 17:00
+
+
+ПримерРисунок-123
+
+
+Количество выявленных случаев заболевания коронавирусной инфекцией за сутки может достигнуть 15 января в столице порядка 7 тыс. Об этом сообщил журналистам мэр Москвы Сергей Собянин.
+
+
+Сегодня по данным лабораторий мы видим, что, к сожалению, "омикрон" начинает доминировать среди заболевших коронавирусом, - это серьезный сигнал к тому, что мы увидим в ближайшие дни серьезный рост заболеваемости. Что, собственно, и демонстрируют даже последние, вот, дни - вчера и сегодня. Завтра мы увидим официальные данные, рост выявляемости будет где-то порядка 6-7 тыс. человек, заболевших ковидом", - сказал Собянин в ходе посещения диагностического центра лабораторных исследований столичного департамента здравоохранения на Варшавском шоссе, специалисты которого проводят секвенирование генома коронавируса.
+ 
+ 
+По его словам, "скорее всего, на следующей неделе этот рост продолжится". "Радует, что количество тяжелых заболеваний при этом не растет, количество госпитализаций не растет. Тем не менее, все равно необходимо быть осторожными, беречься. Особенно это касается людей пожилого возраста, людей с хроническими заболеваниями, которые должны оградить себя от излишних контактов, выполнять те требования, которые предписаны Роспотребнадзором: ношение масок и соблюдение санитарного режима", - заключил мэр.
