--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -55,3 +55,81 @@
  
  
 По его словам, "скорее всего, на следующей неделе этот рост продолжится". "Радует, что количество тяжелых заболеваний при этом не растет, количество госпитализаций не растет. Тем не менее, все равно необходимо быть осторожными, беречься. Особенно это касается людей пожилого возраста, людей с хроническими заболеваниями, которые должны оградить себя от излишних контактов, выполнять те требования, которые предписаны Роспотребнадзором: ношение масок и соблюдение санитарного режима", - заключил мэр.
+
+
+
+Раздел .Уголовное дело возбуждено по факту разбойного ограбления вдовы Александра Градского Марины Коташенко|17.01 21:10
+
+
+
+17.01 21:10
+
+
+ПримерРисунок-123
+
+
+Уголовное дело возбуждено по факту разбойного ограбления вдовы Александра Градского Марины Коташенко. Об этом пишет «Интерфакс» со ссылкой на пресс-службу МВД,
+«Поступило сообщение от женщины 1980 г.р. о том, что в отношении нее было совершено нападение. Со слов потерпевшей, следуя со стороны деревни Глагольево на автомашине, она почувствовала удар в заднюю часть своего автомобиля и вышла из машины. В этот момент к ней подошли трое мужчин, угрожая предметом, похожим на оружие, они заставили проследовать ее к месту проживания, где забрали крупную сумму денег и скрылись», — сообщили в ведомстве.
+
+
+В прокуратуре Подмосковья подтвердили факт ограбления. Как сообщила «Ленте.ру» официальный представитель прокуратуры Московской области Наталья Григорьева, расследование инцидента поставлено на контроль.
+
+
+По предварительным данным, 16 января неизвестные напали на женщину в Наро-Фоминском городском округе Подмосковья. Они угрожали ей предметом, похожим на оружие, в результате чего женщина отдала злоумышленникам крупную сумму денежных средств.
+
+
+Отмечается, что в настоящее время правоохранители устанавливают личности злоумышленников.
+
+
+Об инциденте стало известно вечером 16 января. Трое вооруженных мужчин сымитировали ДТП, после чего подсели в автомобиль к Коташенко, заставили ее вернуться домой и потребовали отдать деньги. По словам источника газеты «Комсомольская правда», женщину «вела целая группировка», за ней следили.
+
+
+
+Раздел .«Лиза Алерт» и местные жители продолжают искать 15-летнюю школьницу, которая пропала 13 января|17.01 21:10
+
+
+
+
+17.01 21:10
+
+
+ПримерРисунок-123
+
+
+В Волгоградской области сотрудники МВД, МЧС и Минобороны, охотники, волонтёры поискового отряда «Лиза Алерт» и местные жители продолжают искать 15-летнюю школьницу, которая пропала 13 января этого года. Об этом сообщается на официальном сайте регионального Следственного комитета (СК) РФ.
+
+
+Отмечается, что она вышла из дома в селе Чухонастовка Камышинского района утром 13 января. Девушка направлялась в школу, однако не дошла до неё. Как заявили в СК РФ, пока что неизвестно, где именно находится пропавшая.
+
+
+Следователи уже осмотрели место проживания подростка, а также допросили родственников, соседей, учителей и одноклассников. К тому же, сотрудники провели ряд оперативно-поисковых мероприятий. При этом, подчёркивается, что поиск школьницы затруднён из-за плохой погоды.
+
+
+Поисково-спасательные отряды исследовали местность, охватив территорию Чухонастовского сельского поселения, спасателями-водолазами обследованы незамерзшие места реки Балыклейка и местного пруда. Следователями-криминалистами областного следственного управления, а также сотрудниками МЧС применялись, в том числе, квадрокоптеры, — рассказали в региональном СК РФ.
+
+
+О том, что девочка пропала, стало известно 14 января. Мать подростка поведала, что правоохранители смогли найти рюкзак девочки и личный дневник. Женщина также сообщала, что дочь никогда не жаловалась на проблемы.
+
+
+
+Раздел .Допуск к госзакупкам техники, созданной на зарубежных процессорах-угроза национальной безопасности|17.01 21:10
+
+
+
+
+17.01 21:10
+
+
+ПримерРисунок-123
+
+
+
+Разработчик российских процессоров «Эльбрус» АО «МЦСТ» считает, что допуск к госзакупкам техники, созданной на зарубежных процессорах, несет угрозу национальной безопасности, пишет РБК. Это следует из письма гендиректора МЦСТ Александра Кима, отправленного в конце 2021 года в Минфин, Минэкономразвития, Федеральную антимонопольную службу (ФАС) и Минцифры, с которым ознакомилось издание.
+
+
+Речь идет о проекте изменений, разработанном Минпромторгом и вводящем балльную систему оценки техники для включения в реестр российской радиоэлектронной продукции и отсрочку до 2024 года на обязательное использование российских процессоров. Как пишет Ким, по предлагаемым правилам после 2024 года набрать допустимый проходной балл можно будет без применения отечественного процессора в технике и обязательного монтажа в России материнских плат, содержащих эти процессоры. По словам Кима, необходимые баллы можно будет набрать, устанавливая второстепенные электронные модули отечественного производства.
+
+
+Отказ от обязательной установки российских процессоров приведет к резкому снижению спроса на них, отмечает Ким. По его словам, в результате продолжится проникновение зарубежных платформ в критическую информационную инфраструктуру, что приведет к ухудшению информационной защищенности цифровой экономики в целом. «Это прямая угроза национальной безопасности России», — написал Ким.
+
+
