--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -134,3 +134,72 @@
 Отказ от обязательной установки российских процессоров приведет к резкому снижению спроса на них, отмечает Ким. По его словам, в результате продолжится проникновение зарубежных платформ в критическую информационную инфраструктуру, что приведет к ухудшению информационной защищенности цифровой экономики в целом. «Это прямая угроза национальной безопасности России», — написал Ким.
 
 
+Раздел .В Москве задержали шесть хакеров|07.02 22:30
+
+
+
+
+07.02 22:30
+
+
+ПримерРисунок-123
+
+
+Следствие попросило арестовать шесть хакеров по делу о неправомерном обороте средств.
+
+
+В Москве следствие ходатайствовало об аресте шести человек  в рамках уголовного дела о неправомерном обороте средств платежей. Их уже доставили в Тверской суд Москвы для избрания меры пресечения, сообщает РБК.
+
+
+«Следователи МВД попросили Тверской суд Москвы отправить в СИЗО шесть человек, которые проходят по одному уголовному делу о неправомерном обороте средств платежей и являются подозреваемыми», — сообщили РБК в пресс-службе суда.
+
+
+По данным ТАСС и «РИА Новости», задержанные — хакеры. Пока неизвестно к какой именно хакерской группировке они принадлежали.
+
+
+
+Раздел .Суд в Приморье приговорил ученого-гидроакустика к 12 годам колонии за госизмену|07.02 22:30
+
+
+
+07.02 22:30
+
+
+ПримерРисунок-123
+
+
+
+Приморский краевой суд приговорил к 12 годам заключения мужчину за передачу иностранному государству сведений о гидроакустических системах обнаружения подлодок. Об этом сообщает пресс-служба суда агенству ТАСС.
+
+
+
+"Приморским краевым судом 7 февраля провозглашен приговор в отношении обвинявшегося в государственной измене в форме шпионажа. Инкриминированные осужденному деяния заключались в собирании в целях передачи представителю иностранного государства сведений, составляющих государственную тайну, в отношении современных гидроакустических систем обнаружения подводных лодок", - говорится в сообщении.
+
+
+
+Уточняется, что подсудимый признан виновным по статье 275 УК РФ ("Госизмена"). С учетом совокупности смягчающих обстоятельств ему определено минимальное наказание в виде лишения свободы на срок 12 лет с отбыванием в колонии строгого режима. Кроме того, ему назначены штраф 300 тысяч рублей и ограничение свободы сроком на 1 год. Приговор в законную силу не вступил.
+
+
+
+Как сообщил источник ТАСС в правоохранительных органах, 70-летний ученый-гидроакустик из Владивостока Виктор Королев был задержан по подозрению в государственной измене и арестован судом в Приморском крае в 2019 году. Позже его доставили в Москву, где официально предъявили обвинение в госизмене. Он находился в СИЗО "Лефортово". Вину он не признал.
+
+
+
+Раздел .Депутата Ярославской области арестовали по подозрению в наркопроизводстве|07.02 22:30
+
+
+
+07.02 22:30
+
+
+ПримерРисунок-123
+
+
+
+В Ярославской области задержан 28-летний депутат муниципального совета Некрасовского сельского поселения Александр Бортников, подозреваемый в организации нарколаборатории. Об этом сообщает 76.ru.
+
+
+По данным портала, против Бортникова возбуждено дело о незаконном производстве наркотических средств группой лиц по предварительному сговору в особо крупном размере. Суд отправил чиновника в СИЗО на два месяца. Под стражей он будет находиться до 15 марта 2022 года.
+
+
+Ему грозит до 20 лет лишения свободы.
