--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -203,3 +203,175 @@
 
 
 Ему грозит до 20 лет лишения свободы.
+
+
+Раздел .В Санкт-Петербурге 8 февраля прошли обыски в жилкомсервисах и дорожных организациях из-за некачественной уборки снега в городе|11.02 12:00
+
+
+
+11.02 12:00
+
+
+ПримерРисунок-123
+
+
+«На основании полученных материалов прокурорских проверок возбуждены уголовные дела по фактам хищений денежных средств организациями, участвующими в уборке города от снега и наледи», — сообщили в прокуратуре города.
+
+В декабре жители города, недовольные темпами уборки снега, направили более 1 тыс. жалоб в дежурную службу комитета по благоустройству Санкт-Петербурга. Специалисты государственной административно-технической инспекции нашли свыше 130 нарушений.
+
+Позже в интернете появилась петиция с просьбой к губернатору города Александру Беглову взять под личный контроль процесс уборки снега.
+
+
+
+Раздел .Генеральная прокуратура РФ направила в суд уголовное дело в отношении экс-министра Открытого правительства Михаила Абызова|11.02 12:00
+
+
+
+11.02 12:00
+
+
+ПримерРисунок-123
+
+
+
+В Генеральной прокуратуре Российской Федерации утверждено обвинительное заключение по уголовному делу в отношении бывшего министра Российской Федерации Михаила Абызова и его соучастников Николая Степанова, Максима Русакова, Сергея Ильичева, Александра Пелипасова, Галины Фрайденберг, Инны Пикаловой, Екатерины Заяц, Олега Серебренникова, Руслана Власова, Оксаны Роженковой и Яны Балан", - говорится в сообщении.
+
+
+
+Раздел .Европейский суд по правам человек приступил к рассмотрению дела о пожаре в Доме Профсоюзов в Одессе 2 мая 2014 года|11.02 12:00
+
+
+
+11.02 12:00
+
+
+ПримерРисунок-123
+
+
+
+Как сообщает «Финская Газета» со ссылкой пресс-релиз Европейского суда по правам человека, в Страсбурге запустили процесс коммуникации со сторонами дела по событиям в Одессе 2 мая 2014 года. Европейским Судом в одно дело были объединены жалобы от 31 заявителя. В документах уточняется, что все заявители либо потеряли кого-то из своих родных, либо сами пострадали. 
+
+
+Украинцы жалуются в ЕСПЧ на то, что власти страны не смогли защитить право на жизнь своих граждан. По их словам, расследование ведется неэффективно, а способ ведения расследования нанёс многим глубокую психологическую травму. Некоторые заявители указывают, что власти затягивают следствие в связи с поданными ими гражданскими исками.
+
+
+Один заявитель дополнительно обращается в связи с тем, что тело отца было выдано для захоронения со значительной задержкой. Все украинцы жалуются на нарушение ст. 13 Европейской Конвенции, которая гарантирует право на эффективное средство правовой защиты.
+Так, ЕСПЧ направил в Киев запросы, в которых просит пояснить, какие меры предприняли власти страны, чтобы предотвратить эту трагедию. Отдельно Cуд интересуется мерами по тушению пожара в Доме профсоюзов.
+
+
+
+Раздел .В подмосковной Истре задержали четырех мужчин, подозреваемых в нападении на «Пятерочку»|11.02 12:00
+
+
+
+11.02 12:00
+
+
+ПримерРисунок-123
+
+
+
+В подмосковной Истре задержали четырех мужчин, подозреваемых в нападении на «Пятерочку». в селе Новопетровском и убийстве женщины-кассира, сообщается на сайте областного управления СК.
+
+
+По данным ведомства, все задержанные — граждане «одного из соседних государств».
+
+
+Нападение произошло в ночь на 9 февраля. По данным СК, грабители с бейсбольными битами избили директора магазина и ее мужа, а также продавца-кассира, которая от полученных травм умерла на месте.
+
+
+
+Раздел .Расследование уголовного дела депутата Госдумы от фракции КПРФ Валерия Рашкина, обвиняемого в незаконной охоте, завершено|11.02 12:00
+
+
+
+11.02 12:00
+
+
+ПримерРисунок-123
+
+
+
+Расследование уголовного дела депутата Госдумы от фракции КПРФ Валерия Рашкина, обвиняемого в незаконной охоте, завершено. Об этом ТАСС рассказал его адвокат Константин Лазарев.
+
+
+"Нас с моим подзащитным Рашкиным официально уведомили об окончании следственных действий. Мы приступили к ознакомлению с его материалами", - сказал он.
+
+
+Басманный суд Москвы ранее удовлетворил ходатайство следствия и продлил Рашкину срок запрета определенных действий до 29 марта.
+
+
+Ранее Басманный суд запретил Рашкину покидать место проживания с вечера до утра и общаться с иными фигурантами его уголовного дела. Согласно постановлению суда, ему запрещено в период с 23:00 до 07:00 выходить без письменного разрешения следователя за пределы жилого помещения, общаться без письменного разрешения следователя с лицами, являющимися по уголовному делу свидетелями, другими обвиняемыми, подозреваемыми, отправлять и получать почтово-телеграфные отправления, использовать средства связи, интернет, посещать охотничьи угодья
+
+
+Раздел .К массовому "минированию" школ" причастен киевский студент Антон Осипчук, заявили в ФСБ|11.02 12:00
+
+
+
+11.02 12:00
+
+
+ПримерРисунок-123
+
+
+Спецслужба совместно с МВД и СК разыскивает людей, распространявших в конце 2021-го — начале 2022 года в интернете сообщения о "минировании" объектов образования, здравоохранения, органов власти и управления, транспортной инфраструктуры в России, Азербайджане, Армении, Белоруссии, Казахстане, Молдавии, а также в самопровозглашенных Донецкой и Луганской народных республиках.
+
+
+Помимо этого, в ведомстве отметили, что в нескольких регионах России задержали 14 участников "сваттинговых" интернет-сообществ. Против них возбудили уголовные дела о заведомо ложных сообщениях о терактах, им грозит до восьми лет колонии. Остальных участников ищут.
+
+
+Волна "минирований" в разных городах России началась в конце 2019 года и затронула суды, торговые центры, станции метро, авиационную и железнодорожную инфраструктуру, школы, лечебные учреждения.
+
+
+В последние несколько месяцев сообщения о взрывных устройствах в местах массового скопления людей участились. Угрозы не подтверждались ни разу.
+
+
+
+Раздел .Пять лет колонии получил фигурант "дела Майнкрафт"|11.02 12:00
+
+
+
+11.02 12:00
+
+
+ПримерРисунок-123
+
+
+Восточный окружной военный суд в четверг огласил приговор трем подросткам по делу о прохождении обучения в целях террористической деятельности (ст. 205.3 УК РФ), известному как "дело Minecraft".
+
+
+Шестнадцатилетний Никита Уваров получил пять лет колонии и 30 тысяч рублей штрафа, еще два фигуранта дела были освобождены от наказания, так как они оказывали содействие следствию. Об этом в своем телеграм-канале сообщает юрист Павел Чиков.
+
+
+На тот момент четырнадцатилетние подростки из города Канска (Красноярский край) стали фигурантами уголовного дела в июне 2020 года. В деле речь шла о том, что с октября 2019 по июнь 2020 года фигуранты вместе обучались, читая запрещенную литературу и просматривая фильмы об изготовлении взрывчатки и бомб. Также они "отрабатывали навыки на практике в заброшенном доме, на пустырях и стройках".
+
+
+В СМИ материалы получили название "дело Minecraft", так как в изученной следствием переписке подростков говорилось об их планах разрушить созданное в компьютерной игре здание ФСБ.
+
+
+10 марта 2021 года стало известно, что в отношении всех троих прекращено уголовное дело об участии в террористическом сообществе. Одновременно в их отношении было возбуждено дело о причастности к изготовлению и хранению взрывчатых веществ и устройств.
+
+
+В августе того же года сообщалось, что подростков освободили из-под стражи.
+
+
+Раздел .Суд арестовал подозреваемого в коррупции полицейского|11.02 12:00
+
+
+
+11.02 12:00
+
+
+ПримерРисунок-123
+
+
+Железнодорожный суд Екатеринбурга арестовал врио главы отдела по контролю за оборотом наркотиков УМВД Екатеринбурга Александра Темникова по делу о коррупции, сообщил ТАСС источник в правоохранительных органах.
+
+
+"Суд избрал ему меру пресечения в виде содержания под стражей. Срок - два месяца", - сказал собеседник агентства.
+
+
+Ранее сообщалось, что региональное управление ФСБ и сотрудники службы собственной безопасности полиции вычислили и задержали сотрудника отдела, которому вменяется п. "в" ч. 5 ст. 290 УК РФ ("Получение взятки в крупном размере за незаконное бездействие") и два эпизода ч. 3 ст. 290 УК РФ ("Получение взятки в значительном размере за незаконное бездействие"). Его должность не уточнялась. Источник ТАСС пояснил, что речь идет о Темникове.
+
+
+По словам источника, рассматривается версия, что Темников мог, привлекая подчиненных, создать организацию, которая системно требовала взятки у людей, которые были либо реально пойманы с наркотиками, либо задержаны с подкинутыми наркотиками.
