--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -375,3 +375,117 @@
 
 
 По словам источника, рассматривается версия, что Темников мог, привлекая подчиненных, создать организацию, которая системно требовала взятки у людей, которые были либо реально пойманы с наркотиками, либо задержаны с подкинутыми наркотиками.
+
+
+Раздел .Устроившего стрельбу в Краснодаре задержала полиция|11.02 15:00
+
+
+
+11.02 15:00
+
+
+
+ПримерРисунок-123
+
+
+
+Как сообщили в пресс-службе МВД по региону, накануне в правоохранительные органы поступила информация о стрельбе в подъезде одного из домов. Полицейские сразу же выдвинулись на место происшествия.
+
+
+По прибытии они задержали 33-летнего приезжего, при котором были охолощенные автомат и пистолет. Их изъяли.
+
+
+Как выяснилось, у мужчины произошел конфликт с женой, после которого он ушел из дома. Когда он вернулся пьяным, та не захотела ему открыть дверь, в итоге казах сделал несколько выстрелов в подъезде.
+
+
+В отношении задержанного возбудили уголовное дело о хулиганстве, ч. 2 ст. 213 УК РФ. На данный момент он находится под арестом.
+
+
+Раздел .Курсанты совершили  разбойнное нападение на магазин|11.02 15:00
+
+
+
+
+11.02 15:00
+
+
+
+ПримерРисунок-123
+
+
+
+Полиция Невского района по «горячим следам» задержала пятерых подростков в возрасте 16-17 лет, которых подозревают в разбойном нападении. В ночь на 10 февраля они пришли в магазин на проспекте Солидарности и, угрожая ножом охраннику, взяли, что хотели.
+
+- 10 февраля в полицию поступило сообщение от охранника сетевого магазина о том, что четверо злоумышленников угрожали ему ножом, избили, забрали детские товары на сумму три тысячи рублей, после чего скрылись, - сообщает пресс-служба ГУ МВД по Петербургу и Ленобласти.
+
+
+Прибывшие на место стражи порядка просились на поиски разбойников и в 4 часа утра, «по горячим следам», были задержаны пятеро студентов городских колледжей. Известно, что большая часть из них учится морском колледже. Отметим, что один из студентов пошел на дело в футболке с надписью «Осторожно, ВМФ».
+Теперь подросткам грозит уголовное дело.
+
+
+Раздел .Сына замглавы МВД Игоря Зубова задержали по делу о взятке|12.02 19:00
+
+
+
+12.02 19:00
+
+
+
+ПримерРисунок-123
+
+
+Оперативники задержали в Самарской области сына замглавы МВД России Игоря Зубова по делу о даче взятки. Об этом ТАСС сообщил источник в правоохранительных органах.
+"Правоохранители задержали в Самарской области сына заместителя главы МВД Игоря Зубова Дениса Зубова. Он подозревается по делу о даче взятки", - сказал собеседник агентства.
+
+
+В свою очередь депутат Госдумы Александр Хинштейн подтвердил эту информацию в своем Telegram-канале. По его словам, сумма взяток могла составить 18 млн рублей.
+"Наряду с Денисом Зубовым в ходе спецоперации задержаны также президент мини-футбольного клуба "Динамо-Самара" Игорь Карпов и бывший директор ООО "МО НТП" Василий Ермаков. Это произошло сразу после того, как Д. Зубов передал портфель с 18 млн рублей сотруднику УФСБ в кафе на третьем этаже ТЦ "Вива Лэнд" на проспекте Кирова. Карпов и Ермаков также при этом присутствовали и активно участвовали в обсуждении", - написал Хинштейн.
+
+
+Он также отметил, что Карпов в 2016 году именно по материалам УФСБ был осужден за незаконную добычу и продажу сырой нефти, Ермаков фигурировал в уголовном деле о взятках сотрудникам УФСБ. Депутат отметил, что общая сумма полученных денег составила тогда по материалам дела 118 млн рублей.
+
+
+Раздел .Подозреваемый в нападении на магазина «Пятерочка» отказался от признательных показаний|12.02 19:00
+
+
+12.02 19:00
+
+
+
+ПримерРисунок-123
+
+
+Один из четверых обвиняемых в нападении на сотрудников магазина «Пятерочка» под Истрой отказался от признательных показаний. Также он заявил, что хочет обжаловать решение об аресте.
+
+
+Об этом сообщил ТАСС со ссылкой на источник в правоохранительных органах. Уточняется, что изначально он признал свою вину. Но позже отказался от своих слов и заявил, что на месте преступления находился случайно. Также он хочет обжаловать свое заключение под стражу.
+
+
+Четверо мужчин совершили налет на магазин в ночь с 8 на 9 февраля. Они напали на сотрудников, которые закрывали смену, и жестко забили их битами. Погибла кассирша, которая пыталась помешать им присвоить деньги. Также ранены управляющая магазина и ее муж, который планировал забрать ее с работы.
+
+
+В итоге грабители вынесли из магазина все деньги — в разных источниках указаны разные суммы — и скрылись. Позже их задержали.
+
+
+Также один из обвиняемых заявил, что просто подвозил своих знакомых и был не в курсе, что те планируют ограбить магазин. Он уточнил, что даже не заходил внутрь.
+
+
+Раздел .ФСБ задержала почти 90 подпольных торговцев оружием в 20 регионах России|12.02 20:00
+
+
+
+12.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+В России ликвидировали новую сеть подпольных торговцев оружием в 20 субъектах страны, правоохранительные органы задержали 87 человек и изъяли 274 единицы оружия, сообщила Федеральная служба безопасности (ФСБ), передает «РИА Новости».
+
+
+«Во взаимодействии с МВД России и Росгвардией пресечена преступная деятельность 87 жителей в 20 субъектах страны, причастных к восстановлению боевых свойств гражданских образцов оружия в подпольных мастерских и их сбыту», — рассказала ФСБ, добавив, что деятельность прекратили 26 подпольных оружейных мастерских.
+
+
+По информации ведомства, из незаконного оборота изъяли 274 единицы огнестрельного оружия отечественного и иностранного производства. Среди изъятого огнестрельного оружия было как современное, так и времен Великой Отечественной войны (немецкие и советские пулеметы и винтовки).
