--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -377,6 +377,31 @@
 По словам источника, рассматривается версия, что Темников мог, привлекая подчиненных, создать организацию, которая системно требовала взятки у людей, которые были либо реально пойманы с наркотиками, либо задержаны с подкинутыми наркотиками.
 
 
+Раздел .Подозреваемые в жестоком нападении на "Пятерочку" признали вину|11.02 14:00
+
+
+
+11.02 14:00
+
+
+
+ПримерРисунок-123
+
+
+
+Все четверо обвиняемых в нападении на магазин в Подмосковье признали вину, а также сознались еще в двух преступлениях. Об этом ТАСС сообщила представитель Главного следственного управления СК по Московской области Ольга Врадий.
+
+
+"В ходе допросов обвиняемые дали следователям признательные показания, сообщив обо всех обстоятельствах преступлений, в том числе по двум эпизодам разбойных нападений, совершенных ими ранее на территории Истринского городского округа. В ближайшее время данные уголовные дела поступят в следственный отдел из органов МВД для соединения в одно производство", - сказала Врадий.
+
+
+Установлено, что один из нападавших в прошлом сотрудник этого продуктового магазина, поэтому он был осведомлен о внутренних процессах работы. Всем четырем мигрантам предъявлено обвинение в разбое и причинении тяжкого вреда здоровью женщины, повлекшего ее смерть. Сегодня следователь ходатайствует об их аресте.
+
+
+В ночь на 9 февраля в селе Новопетровское неизвестные в масках ворвались в магазин "Пятерочка", избили его сотрудников. В результате кассир, женщина 1970 года рождения, погибла, директор магазина и его супруга госпитализированы. Грабители похитили из кассы 71 тыс. рублей и скрылись, но были задержаны по горячим следам.
+
+
+
 Раздел .Устроившего стрельбу в Краснодаре задержала полиция|11.02 15:00
 
 
